vs/manifests/53-dr-wildcard.yaml
# DR-HOST-WILDCARD: *.drwild.internal setzt TLS, api.drwild.internal hat eine
# eigene DR ohne TLS. Fuer api.drwild.internal gilt nur drwild-api.
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: drwild-all
spec:
  host: "*.drwild.internal"
  trafficPolicy:
    tls:
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: drwild-api
spec:
  host: api.drwild.internal
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 5
